<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_explore"
        android:title="@string/explore"
        android:icon="@drawable/eye_selector"/>

    <item
        android:id="@+id/bottom_nav_network"
        android:title="@string/network"
        android:icon="@drawable/inactive_network_tab_icon"/>

    <item
        android:id="@+id/bottom_nav_chat"
        android:title="@string/chat"
        android:icon="@drawable/chat_selector"/>

    <item
        android:id="@+id/bottom_nav_contacts"
        android:title="@string/contacts"
        android:icon="@drawable/contact_selector"/>

    <item
        android:id="@+id/bottom_nav_groups"
        android:title="@string/groups"
        android:icon="@drawable/hashtag_icon"/>

</menu>