<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    android:background="@color/netclan_dark"
    android:paddingHorizontal="10dp"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/options_icon"
        android:layout_gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/button_desc" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_howdy"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_name"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_marginStart="7dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_exclamation"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_marginStart="7dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:src="@drawable/location_icon"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:contentDescription="@string/button_desc"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_unknown"
                android:textStyle="bold"
                android:textSize="11sp"
                android:textColor="@color/white"
                android:layout_marginStart="3dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/refineIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/refine_icon"
            app:tint="@color/white"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/button_desc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_refine"
            android:textStyle="bold"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:layout_marginStart="3dp"/>

    </LinearLayout>

</LinearLayout>