<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    android:paddingTop="25dp"
    android:paddingStart="35dp"
    android:paddingEnd="20dp"
    android:layout_marginTop="12dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/header_image_view"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/man"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:id="@+id/header_settings"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/settings_icon"
            app:tint="@color/netclan"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/header_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/tv_name"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="19sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/tv_uname"
        android:textColor="@color/white"
        android:textSize="14sp"/>

    <ProgressBar
        android:id="@+id/headerProgressBar"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:max="100"
        android:progress="45"
        style="?android:attr/progressBarStyleHorizontal"
        android:progressDrawable="@drawable/custom_progress_bg"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/status"
        android:textColor="@color/white"
        android:textSize="13sp"/>

</androidx.appcompat.widget.LinearLayoutCompat>